# sleep-learning-engine

./: .env.example  .gitignore  .sleep_learning_engine.toml.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
assets/ambient/: README.md
cache/: _remote_nb.ipynb  _user_nb.ipynb  commit_msg.txt  render-direct.err  render.err  render_720p.py  self_heal_render.py  voice.concat.txt
cache/pytest-tmp/studio-1780799186063/studio/: script.txt
cache/smoke/: script.txt
cache/smoke/cache/: voice.concat.txt
cache/smoke_ambient/: script.txt
cache/smoke_ambient/cache/: voice.concat.txt
cache/tts-diag/: voice.concat.txt
cache/tts-rate-test/neg10/: voice.concat.txt
cache/tts-rate-test/neg15/: voice.concat.txt
cache/tts-rate-test/neg20/: voice.concat.txt
cache/tts-rate-test/neg25/: voice.concat.txt
cache/tts-rate-test/neg5/: voice.concat.txt
docs/: CLOUD_RENDER.md  COLAB_NVENC_DEBUG.md  CONTEST_NOTICE.md  HARDWARE.md  KAGGLE_RENDER.md  MI_TUTORIAL.md  USER_GUIDE.md
docs/cloud/: drive_render.ipynb  kaggle_render.ipynb  low_ram_render.ipynb
scripts/: generate_ambient.py  generate_colab_notebook.py  generate_drive_notebook.py  generate_kaggle_notebook.py  normalize_ambient.py  smoke_ambient.py  smoke_render.py  strip_ambient.py  voice_preview.py
src/sleep_learning_engine/: __init__.py  __main__.py  cli.py
src/sleep_learning_engine/ai/: connector.py  script_writer.py
src/sleep_learning_engine/audio/: __init__.py  mixer.py  tts.py
src/sleep_learning_engine/config/: paths.py  settings.py
src/sleep_learning_engine/core/: __init__.py  pipeline.py  state.py
src/sleep_learning_engine/gui/: __init__.py  main_window.py
src/sleep_learning_engine/prompts/: sleeping_dev.md
src/sleep_learning_engine/utils/: files.py  logging.py
src/sleep_learning_engine/video/: __init__.py  builder.py
src/sleep_learning_engine/visual/: assets.py
src/sleeplens/: __init__.py  __main__.py  cli.py
src/sleeplens/ai/: __init__.py  connector.py  script_writer.py
src/sleeplens/audio/: mixer.py
src/sleeplens/config/: __init__.py  paths.py  settings.py
src/sleeplens/core/: exceptions.py  pipeline.py  retry.py
src/sleeplens/gui/: main_window.py
src/sleeplens/utils/: __init__.py  files.py  logging.py
src/sleeplens/video/: __init__.py  builder.py  timing.py
src/sleeplens/visual/: __init__.py
tests/: test_ai_connector.py  test_ambient_playlist.py  test_encoder_fallback.py  test_studio.py  test_voice_env_var.py
