[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleeplens"
version = "0.1.0"
description = "Sleep learning video studio. Turns text prompts into multi-hour, sleep-optimized MP4s with a built-in dark GUI. Provider-agnostic, runs free or local."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "sleep",
    "video",
    "tts",
    "edge-tts",
    "nvidia",
    "nim",
    "deepseek",
    "ffmpeg",
    "gui",
    "customtkinter",
    "ambient",
    "lofi",
    "rain",
    "alpha-waves",
    "study",
    "education",
]
authors = [{ name = "Sleeplens contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Education",
]
dependencies = [
    "customtkinter>=5.2.2",
    "tkinterdnd2>=0.4.2",
    "openai>=1.50",
    "edge-tts>=6.1.18",
    "pillow>=10.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "tenacity>=9.0",
    "loguru>=0.7",
    "pydub>=0.25.1",
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "mypy>=1.11",
    "ruff>=0.6",
]
cuda = [
    "torch>=2.1",
]

[project.scripts]
sleeplens = "sleeplens.cli:dispatch"
sleeplens-gui = "sleeplens.cli:_cmd_gui"

[project.urls]
Homepage = "https://github.com/sleeplens/sleeplens"
Documentation = "https://github.com/sleeplens/sleeplens#readme"
Issues = "https://github.com/sleeplens/sleeplens/issues"
Changelog = "https://github.com/sleeplens/sleeplens/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sleeplens*"]

[tool.setuptools.package-data]
sleeplens = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["ignore::DeprecationWarning"]
