[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep_learning_engine"
version = "1.0.5"
description = "Sleep learning video studio. Turns text prompts into multi-hour, sleep-optimized MP4s with a built-in dark GUI. Provider-agnostic, runs free or local."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "sleep",
    "video",
    "tts",
    "edge-tts",
    "nvidia",
    "nim",
    "deepseek",
    "ffmpeg",
    "gui",
    "customtkinter",
    "ambient",
    "lofi",
    "rain",
    "alpha-waves",
    "study",
    "education",
]
authors = [{ name = "Fernando Jimenez" }]
maintainers = [{ name = "Fernando Jimenez" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Education",
]
dependencies = [
    "customtkinter>=5.2.2",
    "tkinterdnd2>=0.4.2",
    "openai>=1.50",
    "edge-tts>=6.1.18",
    "pillow>=10.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "tenacity>=9.0",
    "loguru>=0.7",
    "pydub>=0.25.1",
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "mypy>=1.11",
    "ruff>=0.6",
]
cuda = [
    "torch>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "mypy>=1.11",
    "ruff>=0.6",
]

[project.scripts]
sleep_learning_engine = "sleep_learning_engine.cli:dispatch"
sleep_learning_engine-gui = "sleep_learning_engine.cli:_cmd_gui"

[project.urls]
Homepage = "https://github.com/sleep_learning_engine/sleep_learning_engine"
Documentation = "https://github.com/sleep_learning_engine/sleep_learning_engine#readme"
Issues = "https://github.com/sleep_learning_engine/sleep_learning_engine/issues"
Changelog = "https://github.com/sleep_learning_engine/sleep_learning_engine/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sleep_learning_engine*"]

[tool.setuptools.package-data]
sleep_learning_engine = [
    "py.typed",
    "prompts/*.md",
    # The 97 bundled ambient tracks live inside the package so the
    # wheel can be reinstalled anywhere (Colab, Kaggle, any clean VM)
    # and the CLI still finds music. Cloud notebooks copy them to
    # the work dir on first run; the local CLI also reads from here
    # as a fallback when the repo-root assets/ambient/ is empty.
    "assets/ambient/*.mp3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.uv]
package = true
managed = true
required-version = ">=0.4"
default-groups = ["dev"]
